--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
   <li style="color: #00F">
     <a href="blue.html">The Blue Page</a>
   </li>
+  <li>
+    <a href="rainbow.html">The Rainbow Page</a>
+  </li>
 </ul>
+
 
 </body>
 </html>
