--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
 <h2>Navigation</h2>
 <ul>
+<li style="color: #F0F">
+  <a href="pink.html">The Pink Page</a>
+</li>
+
   <li>
     <a href="about/index.html">About Us</a>
   </li>
